# backend/apps/http-server/api/endpoint/dashboard.go
@@ -17,7 +17,8 @@ import (
 //	@Failure		500
 //	@Router			/dashboard/all [get]
 func GetAllDashboards(ctx *gin.Context) {
-	entities, dbErr := database.GetAllEntities([]models.Dashboard{})
+	entities, dbErr := database.GetAllEntities(&[]models.Dashboard{})
+	// entities, dbErr := database.QueryRaw("SELECT * FROM dashboards", []models.Dashboard{})
 	if dbErr != nil {
 		fmt.Println(dbErr.Error())
 		ctx.AbortWithStatus(500)
@@ -58,6 +59,40 @@ func PostDashboard(ctx *gin.Context) {
 	ctx.JSON(201, entity)
 }
 
+// PutDashboard backend
+//
+//	@Summary		Update an existing Dashboard
+//	@Description	Stores the dashboard object into the database with the same ID.
+//	@ID				put-dashboard
+//	@Tags			dashboard
+//	@Accept			json
+//	@Produce		json
+//	@Param			dashboard body		Dashboard	true		"The dashboard to update"
+//	@Success		200	{object}		Dashboard
+//	@Failure		400
+//	@Failure		500
+//	@Router			/dashboard [put]
+func PutDashboard(ctx *gin.Context) {
+
+	var dashboard models.Dashboard
+	bindErr := ctx.BindJSON(&dashboard)
+	if bindErr != nil {
+		ctx.AbortWithStatus(400)
+		return
+	}
+	fmt.Printf("%+v\n", dashboard.Metadata)
+
+	entity, dbErr := database.UpdateEntity(&dashboard)
+	if dbErr != nil {
+		fmt.Println("Error found!")
+		fmt.Println(dbErr.Error())
+		ctx.AbortWithStatus(500)
+		return
+	}
+
+	ctx.JSON(201, entity)
+}
+
 // DeleteDashboard backend
 //
 //	@Summary		Delete a dashboard
@@ -71,7 +106,7 @@ func PostDashboard(ctx *gin.Context) {
 func DeleteDashboard(ctx *gin.Context) {
 
 	param := ctx.Param("id")
-	dbErr := database.DeleteEntityById(models.Dashboard{}, param)
+	dbErr := database.DeleteEntityById(&models.Dashboard{}, param)
 	if dbErr != nil {
 		fmt.Println(dbErr.Error())
 		ctx.AbortWithStatus(500)
