# backend/utils/models/dashboard.go
@@ -2,33 +2,48 @@ package models
 
 import "time"
 
-// Dashboard model info
 type Dashboard struct {
-	ID          uint               `json:"id" gorm:"primarykey"`
-	CreatedAt   time.Time          `json:"createdAt,omitempty"`
-	UpdatedAt   time.Time          `json:"updatedAt,omitempty"`
-	DisplayName string             `json:"displayName"`
-	Description *string            `json:"description"`
-	Widgets     *[]DashboardWidget `json:"widgets"`
+	ID        uint               `json:"id" gorm:"primarykey"`
+	CreatedAt time.Time          `json:"createdAt,omitempty"`
+	UpdatedAt time.Time          `json:"updatedAt,omitempty"`
+	Metadata  DashboardMetadata  `json:"metadata"`
+	Widgets   *[]DashboardWidget `json:"widgets"`
 } //@name Dashboard
 
-// DashboardWidget model info
-// @description Widget inside a Dashboard
+type DashboardMetadata struct {
+	ID          uint            `json:"id" gorm:"primarykey"`
+	CreatedAt   time.Time       `json:"createdAt,omitempty"`
+	UpdatedAt   time.Time       `json:"updateAt,omitempty"`
+	DashboardId uint            `json:"dashboardId"`
+	DisplayName string          `json:"displayName"`
+	Description *string         `json:"description"`
+	HeaderImage *[]byte         `json:"headerImage"`
+	Tags        *[]DashboardTag `json:"tags"`
+} //@name DashboardMetadata
+
+type DashboardTag struct {
+	ID                  uint      `json:"id" gorm:"primarykey"`
+	CreatedAt           time.Time `json:"createdAt,omitempty"`
+	UpdatedAt           time.Time `json:"updatedAt,omitempty"`
+	DisplayName         string    `json:"displayName"`
+	DashboardMetadataId int       `json:"dashboardMetadataId"`
+	BgColor             string    `json:"bgColor"`
+	TextColor           string    `json:"textColor"`
+} //@name DashboardTag
+
 type DashboardWidget struct {
 	ID          uint                    `json:"id" gorm:"primarykey"`
 	CreatedAt   time.Time               `json:"createdAt,omitempty"`
 	UpdatedAt   time.Time               `json:"updatedAt,omitempty"`
-	DashboardId uint                    `json:"dashboardId"`
+	DashboardId int                     `json:"dashboardId"`
 	DisplayName string                  `json:"displayName"`
 	Description *string                 `json:"description"`
 	Widget      Widget                  `json:"widget"`
 	Location    DashboardWidgetLocation `json:"location"`
-	WidgetId    uint
-	LocationId  uint
+	WidgetId    int                     `json:"widgetId"`
+	LocationId  int                     `json:"locationId"`
 } //@name DashboardWidget
 
-// DashboardWidgetLocation model info
-// @description Location of a widget inside a Dashboard
 type DashboardWidgetLocation struct {
 	ID        uint      `json:"id" gorm:"primarykey"`
 	CreatedAt time.Time `json:"createdAt,omitempty"`
